[package]
name = "passgen"
version = "0.1.0"
authors = ["Marco Ferri <marcoferri462@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple command line password generator tool made in Rust."
readme = "README.md"
repository = "https://github.com/marcoferri42/passGen"
keywords = ["rust", "cli", "password-generator", "password"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.8.5"
colored = "2.0.4"
